@@ -751,6 +751,50 @@ namespace mscl
     //=====================================================================================================================================================
 
     //=====================================================================================================================================================
+    //                                                        FieldParser_GnssRFErrorDetection
+    const MipTypes::ChannelField FieldParser_GnssRFErrorDetection::FIELD_TYPE = MipTypes::CH_FIELD_GNSS_RF_ERROR_DETECTION;
+    const bool FieldParser_GnssRFErrorDetection::REGISTERED = registerParser();    //register the parser immediately
+
+    void FieldParser_GnssRFErrorDetection::parse(const MipDataField& field, MipDataPoints& result) const
+    {
+        DataBuffer bytes(field.fieldData());
+
+        // get the data
+        const uint8  rfBand        = bytes.read_uint8();
+        const uint8  jammingState  = bytes.read_uint8();
+        const uint8  spoofingState = bytes.read_uint8();
+
+        // skip 4 reserved bytes
+        bytes.read_uint32();
+
+        // get the valid flags
+        const uint16 flags = bytes.read_uint16();
+
+        // get whether points are valid or invalid from the flags
+        const bool rfBandValid   = pointIsValid(flags, RF_BAND_VALID);
+        const bool jammingValid  = pointIsValid(flags, JAMMING_VALID);
+        const bool spoofingValid = pointIsValid(flags, SPOOFING_VALID);
+
+        // identifiers
+        const auto chField = static_cast<MipTypes::ChannelField>(field.fieldId());
+
+        MipChannelIdentifiers addlIds = {
+            MipChannelIdentifier(MipChannelIdentifier::Type::GNSS_RF_BAND, rfBand)
+        };
+
+        // add data points for the values collected
+        result.push_back(MipDataPoint(chField, MipTypes::CH_JAMMING_STATE,  addlIds, valueType_uint8, anyType(jammingState),  jammingValid));
+        result.push_back(MipDataPoint(chField, MipTypes::CH_SPOOFING_STATE, addlIds, valueType_uint8, anyType(spoofingState), spoofingValid));
+    }
+
+    bool FieldParser_GnssRFErrorDetection::registerParser()
+    {
+        static FieldParser_GnssRFErrorDetection p;
+        return registerGnssParser(FIELD_TYPE, &p);
+    }
+    //=====================================================================================================================================================
+
+    //=====================================================================================================================================================
     //                                                        FieldParser_GnssSatelliteStatus
     const MipTypes::ChannelField FieldParser_GnssSatelliteStatus::FIELD_TYPE = MipTypes::CH_FIELD_GNSS_SATELLITE_STATUS;
     const bool FieldParser_GnssSatelliteStatus::REGISTERED = FieldParser_GnssSatelliteStatus::registerParser();    //register the parser immediately
