@@ -527,6 +527,48 @@ namespace mscl
         static const bool REGISTERED;
     };
 
+    //Class: FieldParser_GnssRFErrorDetection
+    //    The field parser for GNSS Error Detection subsystem status
+    class FieldParser_GnssRFErrorDetection : public MipGnssFieldParser
+    {
+        //Constants: Valid Flag Bitmasks
+        //
+        //    RF_BAND_VALID  - 0x01 - RF Band flag mask
+        //    JAMMING_VALID  - 0x02 - Jamming State flag mask
+        //    SPOOFING_VALID - 0x04 - Spoofing State flag mask
+        static constexpr uint16 RF_BAND_VALID  = 0x01; // RF Band flag mask
+        static constexpr uint16 JAMMING_VALID  = 0x02; // Jamming State flag mask
+        static constexpr uint16 SPOOFING_VALID = 0x04; // Spoofing State flag mask
+
+        //Constructor: FieldParser_GnssRFErrorDetection
+        //    Default constructor disabled
+        FieldParser_GnssRFErrorDetection() {}
+
+    public:
+        //Function: parse
+        //    Parses a <MipDataField> for <MipDataPoints> and stores them in the valid or invalid result vectors
+        //
+        //Parameters:
+        //    field - The <MipDataField> to parse for data points
+        //    result - The <MipDataPoints> vector to store the data points in
+        void parse(const MipDataField& field, MipDataPoints& result) const override;
+
+        //Function: registerParser
+        //    The static function that registers this parser with the list of parsers (called immediately)
+        //
+        //Returns:
+        //    True, just for assigning the REGISTERED constant to true
+        static bool registerParser();
+
+        //Constant: FIELD_TYPE
+        //    The 2-byte field type (Descriptor ID + Field ID) for this parser
+        static const MipTypes::ChannelField FIELD_TYPE;
+
+        //Constant: REGISTERED
+        //    Whether this parser is registered. This will always be true. This is used to call registerParser() immediately
+        static const bool REGISTERED;
+    };
+
     //Class: FieldParser_GnssSatelliteStatus
     //    The field parser for GNSS Satellite Status data
     class FieldParser_GnssSatelliteStatus : public MipGnssFieldParser
